Fix test failure.

--- a/components/mediation-admin/org.wso2.carbon.rest.api/pom.xml
+++ b/components/mediation-admin/org.wso2.carbon.rest.api/pom.xml
@@ -72,6 +72,10 @@
             <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
