--- a/pom.xml
+++ b/pom.xml
@@ -2545,7 +2545,7 @@
         <carbon.rule.version>4.5.6</carbon.rule.version>
         <carbon.rule.imp.pkg.version>[4.5.0, 4.6.0)</carbon.rule.imp.pkg.version>
         <!-- Synapse Version -->
-        <synapse.version>4.1.0-wso2v2-SNAPSHOT</synapse.version>
+        <synapse.version>4.1.0-wso2v2</synapse.version>
         <carbon.identity.entitlement.proxy.version>5.4.9</carbon.identity.entitlement.proxy.version>
         <carbon.identity.entitlement.proxy.imp.pkg.version>[5.2.0, 6.0.0)
         </carbon.identity.entitlement.proxy.imp.pkg.version>
@@ -2680,8 +2680,8 @@
         <owasp.encoder.wso2.version>1.2.0.wso2v1</owasp.encoder.wso2.version>
         <owasp.encoder.wso2.imp.pkg.version>[1.2.0,1.3.0)</owasp.encoder.wso2.imp.pkg.version>
         <maven.surefire.plugin.version>2.12.4</maven.surefire.plugin.version>
-        <maven.jacoco.plugin.version>0.8.2</maven.jacoco.plugin.version>
-        <jacoco.agent.version>0.8.2</jacoco.agent.version>
+        <maven.jacoco.plugin.version>0.8.11</maven.jacoco.plugin.version>
+        <jacoco.agent.version>0.8.11</jacoco.agent.version>
         <activemq.version>5.2.0</activemq.version>
         <activemq.broker.version>5.15.2</activemq.broker.version>
         <version.org.wso2.orbit.javax.activation>1.1.1.wso2v3</version.org.wso2.orbit.javax.activation>
