--- a/features/mediator-features/pom.xml
+++ b/features/mediator-features/pom.xml
@@ -36,7 +36,7 @@
         <module>bam-mediator</module>
 	    <module>oauth-mediator-feature</module>
 	    <module>kerberos-mediator-feature</module>
-        <!--<module>entitlement-mediator-feature</module>-->
+        <module>entitlement-mediator-feature</module>
         <module>org.wso2.carbon.mediators.feature</module>
         <module>org.wso2.carbon.mediators.ui.feature</module>
         <module>org.wso2.carbon.mediators.server.feature</module>
