--- a/pom.xml
+++ b/pom.xml
@@ -2428,7 +2428,7 @@
             </dependency>
             <dependency>
                 <groupId>org.wso2.orbit.org.opensaml</groupId>
-                <artifactId>opensaml</artifactId>
+                <artifactId>opensaml-jdk21</artifactId>
                 <version>${opensaml.orbit.version}</version>
             </dependency>
             <dependency>
@@ -2696,7 +2696,7 @@
         <version.org.wso2.orbit.javax.activation>1.1.1.wso2v1</version.org.wso2.orbit.javax.activation>
         <maven.bundle.plugin.version>3.3.0</maven.bundle.plugin.version>
         <saml.common.util.version>1.3.1</saml.common.util.version>
-        <opensaml.orbit.version>3.3.1.wso2v11</opensaml.orbit.version>
+        <opensaml.orbit.version>3.3.1.wso2v118</opensaml.orbit.version>
         <jackson.dataformat.yaml.version>2.17.2</jackson.dataformat.yaml.version>
         <javax.validation.version>1.1.0.Final</javax.validation.version>
         <glassfish.cobra.version>4.2.1</glassfish.cobra.version>
